versioned_docs/version-6.2/server/configuration/backup-configuration.mdx
---
title: "Configuration: Backup"
sidebar_label: Backup Options
sidebar_position: 3
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Configuration: Backup
<Admonition type="note" title="">

* Configuration options for backups (both on premise and RavenDB Cloud).  

* Another relevant server configuration option can be found [here](./server-configuration.mdx#servercpucreditsexhaustionbackupdelayinmin).

* In this page:  
    * [Backup.TempPath](#backuptemppath)  
    * [Backup.LocalRootPath](#backuplocalrootpath)  
    * [Backup.AllowedDestinations](#backupalloweddestinations)  
    * [Backup.AllowedAwsRegions](#backupallowedawsregions)  
    * [Backup.MaxNumberOfConcurrentBackups](#backupmaxnumberofconcurrentbackups)  
    * [Backup.ConcurrentBackupsDelayInSec](#backupconcurrentbackupsdelayinsec)  
    * [Backup.LowMemoryBackupDelayInMin](#backuplowmemorybackupdelayinmin)  
    * [Backup.MoveToNewResponsibleNodeGracePeriodInMin](#backupmovetonewresponsiblenodegraceperiodinmin)  

</Admonition>
## Backup.TempPath

Use this setting to specify a different path to the temporary backup files.  
By default, backup temporary files are written under the Database directory or under [Storage.TempPath](./storage-configuration.mdx) if defined.  
Learn more about RavenDB directory structure [here](../storage/directory-structure.mdx).

- **Type**: `string`
- **Default**: `null`
- **Scope**: Server-wide or per database



## Backup.LocalRootPath

Local backups can only be created under this root path.  

- **Type**: `string`  
- **Default**: `null`  
- **Scope**: Server-wide only  



## Backup.AllowedDestinations

Semicolon separated list of allowed backup destinations. If not specified, all destinations are allowed.   

- **Type**: `string`  
- **Default**: `null`  
- **Scope**: Server-wide only  

Possible values:  

- `None`  
- `Local`  
- `Azure`  
- `AmazonGlacier`  
- `AmazonS3`  
- `FTP`  



## Backup.AllowedAwsRegions

Semicolon separated list of allowed AWS regions. If not specified, all regions are allowed.  

- **Type**: `string`  
- **Default**: `null`  
- **Scope**: Server-wide only  



## Backup.MaxNumberOfConcurrentBackups

Maximum number of concurrent backup tasks.  

- **Type**: `int`  
- **Default**: the number of CPU cores assigned to this server, divided by 2.  
  (By default a server with 1, 2, or 3 CPU cores can perform 1 backup at a time. A server with 4 or 5 cores can perform 2 backups at a time, 6 or 7 cores can perform 3, and so on)
- **Scope**: Server-wide only  



## Backup.ConcurrentBackupsDelayInSec

Number of seconds to delay the backup after hitting the maximum number of concurrent backups limit (see `MaxNumberOfConcurrentBackups` above).  

- **Type**: `TimeSetting`  
- **TimeUnit**: `TimeUnit.Seconds`  
- **Default**: `30`  
- **Scope**: Server-wide only  



## Backup.LowMemoryBackupDelayInMin

Number of minutes to delay the backup if the server enters a low memory state.  

- **Type**: `TimeSetting`  
- **TimeUnit**: `TimeUnit.Minutes`  
- **Default**: `10`  
- **Scope**: Server-wide only  



## Backup.MoveToNewResponsibleNodeGracePeriodInMin

Number of minutes the [cluster observer](../clustering/distribution/cluster-observer.mdx) waits
before reassigning a backup task to a new responsible node,
when the current responsible node has entered the
[Rehab state](../clustering/distribution/distributed-database.mdx#database-topology).  

During this grace period, the task remains assigned to its current responsible node.  
This gives the node a chance to recover, and prevents a duplicate backup
from starting elsewhere in the cluster.  

- **Type**: `TimeSetting`  
- **TimeUnit**: `TimeUnit.Minutes`  
- **Default**: `30`  
- **Scope**: Server-wide only  



